deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-world-deployment
 labels:
   app: hello-world
spec:
 replicas: 3
 selector:
   matchLabels:
     app: hello-world
 template:
   metadata:
     labels:
       app: hello-world
   spec:
     containers:
     - name: hello-world
       image: sk260/flask-hello-world:latest
       ports:
       - containerPort: 5000
