deploymentservice.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
#  type: NodePort
  selector:
    app: hello-world
  ports:
    - port: 5000
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 5000
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
#      nodePort: 30007
